// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OffersForm> > renders and matches snapshot 1`] = `
<div>
  <form
    data-testid="choose-offer-form"
    novalidate=""
  >
    <h2
      class="_title_f7961f"
    >
      choose_offer.title
    </h2>
    <h3
      class="_subtitle_f7961f"
    >
      choose_offer.watch_this_on_platform
    </h3>
    <div
      class="_offerGroupSwitch_f7961f"
    >
      <input
        checked=""
        class="_radio_f7961f"
        id="svod"
        name="offerType"
        type="radio"
        value="svod"
      />
      <label
        class="_label_f7961f _offerGroupLabel_f7961f"
        for="svod"
      >
        choose_offer.subscription
      </label>
      <input
        class="_radio_f7961f"
        id="tvod"
        name="offerType"
        type="radio"
        value="tvod"
      />
      <label
        class="_label_f7961f _offerGroupLabel_f7961f"
        for="tvod"
      >
        choose_offer.one_time_only
      </label>
    </div>
    <div
      class="_offers_f7961f"
    >
      <div
        class="_offer_f7961f"
      >
        <input
          aria-label="choose_offer.monthly_subscription"
          checked=""
          class="_radio_f7961f"
          id="S916977979_NL"
          name="offerId"
          type="radio"
          value="S916977979_NL"
        />
        <label
          class="_label_f7961f"
          for="S916977979_NL"
        >
          <h4
            class="_offerTitle_f7961f"
          >
            choose_offer.monthly
          </h4>
          <hr
            class="_offerDivider_f7961f"
          />
          <ul
            class="_offerBenefits_f7961f"
          >
            <li>
              <svg
                aria-hidden="true"
                class="_icon_1e9999"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.first_periods_free
            </li>
            <li>
              <svg
                aria-hidden="true"
                class="_icon_1e9999"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.cancel_anytime
            </li>
            <li>
              <svg
                aria-hidden="true"
                class="_icon_1e9999"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.watch_on_all_devices
            </li>
          </ul>
          <div
            class="_fill_f7961f"
          />
          <div
            class="_offerPrice_f7961f"
          >
            € 6,99
             
            <small>
              /
              periods.month
            </small>
          </div>
        </label>
      </div>
      <div
        class="_offer_f7961f"
      >
        <input
          aria-label="choose_offer.yearly_subscription"
          class="_radio_f7961f"
          id="S345569153_NL"
          name="offerId"
          type="radio"
          value="S345569153_NL"
        />
        <label
          class="_label_f7961f"
          for="S345569153_NL"
        >
          <h4
            class="_offerTitle_f7961f"
          >
            choose_offer.yearly
          </h4>
          <hr
            class="_offerDivider_f7961f"
          />
          <ul
            class="_offerBenefits_f7961f"
          >
            <li>
              <svg
                aria-hidden="true"
                class="_icon_1e9999"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.first_days_free
            </li>
            <li>
              <svg
                aria-hidden="true"
                class="_icon_1e9999"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.cancel_anytime
            </li>
            <li>
              <svg
                aria-hidden="true"
                class="_icon_1e9999"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.watch_on_all_devices
            </li>
          </ul>
          <div
            class="_fill_f7961f"
          />
          <div
            class="_offerPrice_f7961f"
          >
            € 50,00
             
            <small>
              /
              periods.year
            </small>
          </div>
        </label>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="_button_f8f296 _primary_f8f296 _fullWidth_f8f296"
      type="submit"
    >
      <span>
        choose_offer.continue
      </span>
    </button>
  </form>
</div>
`;

exports[`<OffersForm> > renders and matches snapshot 2`] = `
<div>
  <form
    data-testid="choose-offer-form"
    novalidate=""
  >
    <h2
      class="_title_f7961f"
    >
      choose_offer.title
    </h2>
    <h3
      class="_subtitle_f7961f"
    >
      choose_offer.watch_this_on_platform
    </h3>
    <div
      class="_offerGroupSwitch_f7961f"
    >
      <input
        class="_radio_f7961f"
        id="svod"
        name="offerType"
        type="radio"
        value="svod"
      />
      <label
        class="_label_f7961f _offerGroupLabel_f7961f"
        for="svod"
      >
        choose_offer.subscription
      </label>
      <input
        checked=""
        class="_radio_f7961f"
        id="tvod"
        name="offerType"
        type="radio"
        value="tvod"
      />
      <label
        class="_label_f7961f _offerGroupLabel_f7961f"
        for="tvod"
      >
        choose_offer.one_time_only
      </label>
    </div>
    <div
      class="_offers_f7961f"
    >
      <div
        class="_offer_f7961f"
      >
        <input
          aria-label="One Time - TVOD offer"
          checked=""
          class="_radio_f7961f"
          id="R892134629_NL"
          name="offerId"
          type="radio"
          value="R892134629_NL"
        />
        <label
          class="_label_f7961f"
          for="R892134629_NL"
        >
          <h4
            class="_offerTitle_f7961f"
          >
            One Time - TVOD offer
          </h4>
          <hr
            class="_offerDivider_f7961f"
          />
          <ul
            class="_offerBenefits_f7961f"
          >
            <li>
              <svg
                aria-hidden="true"
                class="_icon_1e9999"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                  />
                </g>
              </svg>
               
              choose_offer.benefits.watch_on_all_devices
            </li>
          </ul>
          <div
            class="_fill_f7961f"
          />
          <div
            class="_offerPrice_f7961f"
          >
            € 2,90
             
          </div>
        </label>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="_button_f8f296 _primary_f8f296 _fullWidth_f8f296"
      type="submit"
    >
      <span>
        choose_offer.continue
      </span>
    </button>
  </form>
</div>
`;
